--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,48 @@ PharoDebug.log
 # Squeak Smalltalk Debug log file
 SqueakDebug.log
 
-# Monticello package cache
-/package-cache
-
 # playground cache
 /play-cache
 /play-stash
 
-# Metacello-github cache
-/github-cache
-github-*.zip
+# Smalltalk related binary files #
+##################################
+*.mcz
+*.changes
+*.image
+*.sources
+*.dmp
+package-cache/
+github-cache/
+*-cache/
+*~
+
+# Compiled source #
+###################
+*.com
+
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
